[project]
name = "streamable-same-s"
version = "0.1.0"
description = "Stream SAME-S to TorchScript for the nn~ (Max/MSP) external, with click-free real-time streaming baked in."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.0",
    "stable-audio-3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
streamable-same-s-export = "streamable_same_s.export:main"

# Mirror stable-audio-3's torch indexing so the cu124 index (pulled in via the path
# dependency) is only used on linux/x86_64; mac/Windows resolve torch from PyPI.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
# Local working copy of stable-audio-3 (reused only for weight loading). Swap for a git
# source to share, e.g. { git = "https://github.com/Stability-AI/stable-audio-3" }.
stable-audio-3 = { path = "../stable-audio-3", editable = true }
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }]
torchaudio = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamable_same_s"]

[tool.pytest.ini_options]
testpaths = ["tests"]
